fixed typing animation bug causing menu btn to be pushed off screen

--- a/css/core.scss
+++ b/css/core.scss
@@ -940,4 +940,9 @@ header {
       font-size: 1.35rem;
     }
   }
+
+  #journey::before {
+    content: "\a";
+    white-space: pre;
+  }
 }
